Rule loading, storage listener, save message UI

--- a/source/ui/options.html
+++ b/source/ui/options.html
@@ -14,6 +14,7 @@
 	<header>
 		<h1>Chredirect Options</h1>
 		<div style="float: right; margin-top: -3em; margin-right: 1.7em;">
+			<span id="saveMessage" class="positiveText"></span>
 			<button id="saveButton" class="positive">Save</button>
 		</div>
 	</header>
